istio/virtual-services/ledger-service-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ledger-service-vs
  namespace: rental-dev
spec:
  hosts:
    - ledger-service.rental-dev.svc.cluster.local
  gateways:
    - mesh
  http:
    - route:
        - destination:
            host: ledger-service.rental-dev.svc.cluster.local
            subset: v1
            port:
              number: 8002
          weight: 100
      timeout: 2s
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: gateway-error,connect-failure,retriable-4xx
